fixed spacing on sub lists

--- a/css/filters.css
+++ b/css/filters.css
@@ -52,6 +52,10 @@
     padding: 5px;
 }
 
+ul {
+    margin-top: 0;
+}
+
 /* colors for different types of institutions */
 
 .graduate {
